Provides alt option of css styling for navbar spacing if logged in or not. Still need to fix navbar to the top of the page for all pages.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,7 +47,7 @@ body {
 }
 
 header {
-	top: 100%;
+	top: 0;
 }
 
 #header{
@@ -65,7 +65,7 @@ header {
 }
 
 #header.fixed{
-    bottom:auto;
+    bottom: auto;
     top:0;
     margin-top: 0;
 }
@@ -94,8 +94,14 @@ header {
 
 #mainpage {
 	float: left;
-	margin-left: 30px;
-	margin-right: 100px;
+	margin-left: 15px;
+	margin-right: 45px;
+}
+
+#alt-mainpage {
+	float: left;
+	margin-left: 15px;
+	margin-right: 300px;
 }
 
 nav {
